new user info format
